# algokit-core

./: '  .gitignore  Cargo.toml  README.md  algokit_msgpack_ffi_serialization_plan.md  algorand-rust-ffis.code-workspace  package.json  rust-analyzer.toml
.github/workflows/: api_clients_ci.yml  ci_cd.yml  maturin.yml  python.yml  python_api_client_ci_cd.yml  python_uniffi_ci_cd.yml  swift_ci.yml  test.yml  typescript_api_client_ci_cd.yml
api/: README.md  package.json
api/api_clients/python/: .openapi-generator-ignore  README.md  pyproject.toml  setup.py
api/api_clients/python/.openapi-generator/: FILES
api/api_clients/python/algorand_algod_client/: __init__.py  api_client.py  configuration.py  rest.py
api/api_clients/python/docs/: AbortCatchup200Response.md  Account.md  AccountApplicationInformation200Response.md  AccountAssetHolding.md  AccountAssetInformation200Response.md  AccountAssetsInformation200Response.md  AccountParticipation.md  AccountStateDelta.md  AddParticipationKey200Response.md  AlgodApi.md  AppCallLogs.md  Application.md  ApplicationInitialStates.md  ApplicationKVStorage.md  ApplicationLocalReference.md  ApplicationLocalState.md  ApplicationParams.md  ApplicationStateOperation.md  ApplicationStateSchema.md  Asset.md  AssetHolding.md  AssetParams.md  (+57 more)
api/api_clients/typescript/: README.md  package.json  tsconfig.json
api/oas_templates/python/: .openapi-generator-ignore  README.md  README.mustache  README_onlypackage.mustache  __init__model.mustache  api.mustache  api_client.mustache  api_test.mustache  api_usage_example.mustache  config.yaml  configuration.mustache  conftest.mustache  dummy_data.mustache  model.mustache  model_generic.mustache  model_test.mustache  msgpack_handler.mustache  openapi-config.yaml  partial_api_simple.mustache  pyproject.mustache  requirements.mustache  rest.mustache  test_readme.mustache  test_utils.mustache
api/oas_templates/rust_msgpack/: model.mustache  openapi-config.yaml
api/oas_templates/typescript/: index.mustache  openapi-config.yaml  package.mustache
api/scripts/: add_vendor_extensions.py  generate-algod-clients.ts  generate-clients.ts  output_swagger.json  sync-vendored-extensions.ts  template-customization.md
api/specs/: README.md  algod.oas2.json  algod.oas3.json  algod.oas3.yml  algod.oas3_txns_only.json  compatibility.md
crates/algokit_http_client_trait/: Cargo.toml
crates/algokit_http_client_trait/src/: lib.rs
crates/algokit_msgpack/: Cargo.toml  README.md
crates/algokit_msgpack/src/: lib.rs  models.rs
crates/algokit_msgpack/src/models/: account.rs  mod.rs  simulate.rs
crates/algokit_msgpack/tests/: account_tests.rs  simulate_request_test.rs  simulate_response_test.rs  simulate_tests.rs
crates/algokit_msgpack_ffi/: Cargo.toml  MSGPACK_BEST_PRACTICES.md  README.md  build.rs  uniffi.toml
crates/algokit_msgpack_ffi/.openapi-generator/: FILES
crates/algokit_msgpack_ffi/docs/: Account.md  AccountApplicationInformation200Response.md  AccountAssetInformation200Response.md  AccountAssetsInformation200Response.md  AccountParticipation.md  AlgorandBox.md  AppCallLogs.md  ApplicationInitialStates.md  ApplicationKvStorage.md  ApplicationLocalState.md  ApplicationParams.md  ApplicationStateOperation.md  ApplicationStateSchema.md  AvmValue.md  Box.md  DryrunRequest.md  DryrunSource.md  DryrunState.md  DryrunTxnResult.md  GetApplicationBoxes200Response.md  GetBlock200Response.md  GetPendingTransactionsByAddress200Response.md  GetStatus200Response.md  GetTransactionProof200Response.md  LedgerStateDeltaForTransactionGroup.md  LightBlockHeaderProof.md  ParticipationKey.md  PendingTransactionResponse.md  ScratchChange.md  SimulateRequest.md  SimulateRequestTransactionGroup.md  SimulateTraceConfig.md  SimulateTransaction200Response.md  SimulateTransactionGroupResult.md  SimulateTransactionResult.md  SimulateUnnamedResourcesAccessed.md  SimulationEvalOverrides.md  SimulationOpcodeTraceUnit.md  SimulationTransactionExecTrace.md  StateProofMessage.md  (+3 more)
crates/algokit_msgpack_ffi/src/: lib.rs
crates/algokit_msgpack_ffi/src/models/: abort_catchup_200_response.rs  account.rs  account_application_information_200_response.rs  account_asset_holding.rs  account_asset_information_200_response.rs  account_assets_information_200_response.rs  account_participation.rs  account_state_delta.rs  add_participation_key_200_response.rs  algorand_box.rs  app_call_logs.rs  application.rs  application_initial_states.rs  application_kv_storage.rs  application_local_reference.rs  application_local_state.rs  application_params.rs  application_state_operation.rs  application_state_schema.rs  asset.rs  asset_holding.rs  asset_holding_reference.rs  asset_params.rs  avm_key_value.rs  avm_value.rs  box_reference.rs  build_version.rs  debug_settings_prof.rs  dryrun_request.rs  dryrun_source.rs  dryrun_state.rs  dryrun_txn_result.rs  error_response.rs  eval_delta.rs  eval_delta_key_value.rs  get_application_boxes_200_response.rs  get_block_200_response.rs  get_block_hash_200_response.rs  get_block_logs_200_response.rs  get_block_time_stamp_offset_200_response.rs  (+35 more)
crates/algokit_transact/: Cargo.toml
crates/algokit_transact/src/: address.rs  constants.rs  lib.rs  suggested_params.rs  tests.rs  traits.rs  utils.rs
crates/algokit_transact/src/test_utils/: mod.rs
crates/algokit_transact/src/transactions/: asset_transfer.rs  common.rs  mod.rs  payment.rs
crates/algokit_transact_ffi/: Cargo.toml  build.rs  polytest.toml  test_data.json  test_plan.md
crates/algokit_transact_ffi/src/: lib.rs
crates/algokit_utils/: Cargo.toml
crates/algokit_utils/src/: lib.rs
crates/algokit_utils_ffi/: Cargo.toml  uniffi.toml
crates/algokit_utils_ffi/src/: lib.rs  uniffi_ffi.rs  wasm.rs
crates/ffi_mutex/: Cargo.toml
crates/ffi_mutex/src/: lib.rs
docs/research/: glibc_and_musl.md  msgpack_offloading.md  openapi-generators.md
msgpacks/: analyze-differences.md  debug-signed-transaction.ts  decode-original.ts  package.json  simulate-request-example.ts  tsconfig.json
scripts/generate_test_data/: index.ts
utils/: semantic-release.cjs
(+154 files in other folders)
