[workspace]
resolver = "2"
members = [
	"crates/algo_models",
	"crates/algo_models_ffi",
	"crates/ffi_macros",
	"crates/uniffi-bindgen", "tools/cargo-bin",
]

[workspace.metadata.bin]
polytest = { version = "0.2.4", locked = true }
uniffi-bindgen-go = { git = "https://github.com/NordSecurity/uniffi-bindgen-go", tag = "v0.3.0+v0.28.3", version = "*" }
