[package]
name = "algokit_msgpack"
version = "0.5.0"
edition = "2021"
description = "Algorand MessagePack encoding/decoding utilities"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/algorandfoundation/algokit-core"
keywords = ["algorand", "msgpack", "encoding", "crypto"]

[dependencies]
base64 = "0.13.0"
rmp = "0.8.12"
rmp-serde = "1.1.1"
rmpv = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
rand = "0.8.5"
serde_json = { version = "1.0.96", features = ["preserve_order"] }
