[package]
name = "algokit_msgpack"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
rmp = "0.8.12"
rmp-serde = "1.3.0"
rmpv = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.96"
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = { version = "1.0.96", features = ["preserve_order"] }
