[package]
name = "algokit_msgpack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
rmp = "0.8.12"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.133"
thiserror = { workspace = true }
serde_with = { version = "3.11.0", features = ["macros"] }

[dev-dependencies]
rand = "0.8.5"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
