[package]
name = "algokit_msgpack_ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for the algokit_msgpack library"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["ffi_uniffi"]
ffi_uniffi = ["dep:uniffi"]
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next"]

[dependencies]
algokit_msgpack = { path = "../algokit_msgpack" }
ffi_macros = { path = "../ffi_macros" }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
thiserror = { workspace = true }
base64 = "0.22.1"
tsify-next = { workspace = true, optional = true }
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
