[package]
name = "algokit_msgpack_ffi"
version = "0.1.0"
description = "FFI bindings for API endpoint for algod operations. with msgpack support"
license = "MIT"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["ffi_uniffi"]
ffi_uniffi = ["dep:uniffi"]
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next"]

[dependencies]
ffi_macros = { path = "../ffi_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
rmp-serde = "1.1"
rmp = "0.8"
rmpv = "1.3"
serde_with = { version = "3.11.0", features = ["macros", "base64"] }
serde_bytes = "0.11.15"
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
hex = "0.4"
url = "2.3"
reqwest = { version = "0.11", features = ["json"] }
tsify-next = { workspace = true, optional = true }
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
  "build",
] }
ffi_macros = { path = "../ffi_macros" }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
