[package]
name = "algokit_msgpack_ffi"
version = "0.1.0"
description = "FFI bindings for API endpoint for algod operations. with msgpack support"
license = "MIT"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["ffi_uniffi"]
ffi_uniffi = ["dep:uniffi"]
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next", "dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
rmp = "0.8"
rmpv = "1.3"
serde_with = { version = "3.11.0", features = ["macros", "base64"] }
serde_json = "1.0"
base64 = "0.22.1"
thiserror = { workspace = true }
paste = "1.0"

# Optional FFI dependencies
serde-wasm-bindgen = { version = "0.6", optional = true }
tsify-next = { workspace = true, optional = true }
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
  "build",
] }
